Fix missing margin for About title

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ main > * {
 
 .animated-h2-container {
   position: relative;
+  margin: 66.4px 0;
 }
 
 .animated-h2-container > .h2-container {
